<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainActivity">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        shimmer:duration="800"
        tools:ignore="MissingConstraints">

        <include layout="@layout/recipe_placeholder_item"/>
        <include layout="@layout/recipe_placeholder_item"
            android:layout_marginTop="@dimen/recipe_placeholder_item2_margin_top"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <include layout="@layout/recipe_placeholder_item"
            android:layout_marginTop="@dimen/recipe_placeholder_item3_margin_top"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/offlineMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="@dimen/offlineMode_padding"
                android:textColor="#FFFFFF"
                android:background="#000000"
                android:text="@string/offline_mode"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/popularTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/popularity_margin_start"
                android:layout_marginTop="@dimen/popularity_margin_top"
                android:layout_marginBottom="@dimen/popularity_margin_bottom"
                android:text="@string/popularity"
                android:textColor="#000000"
                android:textSize="@dimen/popularity_text_size"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/popularList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/offlineMode" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/popularList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/popular_list_margin_start"
                android:layout_marginEnd="@dimen/popular_list_margin_end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popularFilter" />

            <EditText
                android:id="@+id/popularFilter"
                android:layout_width="@dimen/popular_filter_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/popular_filter_margin_end"
                android:drawableStart="@drawable/search"
                android:focusable="true"
                android:hint="@string/searchPopular"
                android:inputType="text"
                android:visibility="gone"
                android:textSize="@dimen/popular_filter_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/offlineMode" />

            <TextView
                android:id="@+id/topRatedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/toprated_title_margin_start"
                android:layout_marginBottom="@dimen/toprated_title_margin_bottom"
                android:text="@string/topRated"
                android:textColor="#000000"
                android:textSize="@dimen/toprated_title_text_size"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/topRatedList"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/topRatedList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/topRatedList_margin_start"
                android:layout_marginEnd="@dimen/topRatedList_margin_end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topRatedFilter" />

            <EditText
                android:id="@+id/topRatedFilter"
                android:layout_width="@dimen/topRatedFilter_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topRatedFilter_margin_top"
                android:layout_marginEnd="@dimen/topRatedFilter_margin_end"
                android:textSize="@dimen/topRatedFilter_text_size"
                android:inputType="text"
                android:hint="@string/searchTopRated"
                android:visibility="gone"
                android:drawableStart="@drawable/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popularList" />

            <EditText
                android:id="@+id/upcomingFilter"
                android:layout_width="@dimen/upcomingFilter_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/upcomingFilter_margin_top"
                android:layout_marginEnd="@dimen/upcomingFilter_margin_end"
                android:textSize="@dimen/upcomingFilter_text_size"
                android:inputType="text"
                android:visibility="gone"
                android:hint="@string/searchUpcoming"
                android:drawableStart="@drawable/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topRatedList"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/upcomingList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/upcomingList_margin_start"
                android:layout_marginEnd="@dimen/upcomingList_margin_end"
                android:layout_marginBottom="@dimen/upcomingList_margin_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upcomingFilter" />

            <TextView
                android:id="@+id/upcomingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/upcoming_title_margin_start"
                android:layout_marginBottom="@dimen/upcoming_title_margin_bottom"
                android:text="@string/upcoming"
                android:textColor="#000000"
                android:textSize="@dimen/upcoming_title_margin_text_size"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/upcomingList"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>