<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MovieDataActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/generalConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/movie_image_poster_height"
                android:layout_marginTop="@dimen/movie_image_poster_margin_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_title_margin_start"
                android:layout_marginTop="@dimen/movie_title_margin_top"
                android:textSize="@dimen/movie_title_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_poster"
                tools:text="Title" />

            <TextView
                android:id="@+id/txtReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_releasedate_margin_start"
                android:layout_marginTop="@dimen/movie_release_date_margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle"
                tools:text="2001-01-01" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_descripcion_margin_start"
                android:layout_marginTop="@dimen/movie_descripcion_margin_top"
                android:layout_marginEnd="@dimen/movie_descripcion_margin_end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtReleaseDate"
                tools:text="Descripcion" />

            <TextView
                android:id="@+id/txtAdultTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_adult_title_margin_start"
                android:layout_marginTop="@dimen/movie_adult_title_margin_top"
                android:text="@string/adult"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

            <TextView
                android:id="@+id/txtAdult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_adult_margin_start"
                app:layout_constraintStart_toEndOf="@+id/txtAdultTitle"
                app:layout_constraintTop_toTopOf="@+id/txtAdultTitle"
                tools:text="No" />

            <TextView
                android:id="@+id/txtPopularityTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_popularity_title_margin_start"
                android:layout_marginTop="@dimen/movie_popularity_title_margin_top"
                android:text="@string/popularityVideoData"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAdult" />

            <TextView
                android:id="@+id/txtPopularity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_popularity_margin_start"
                app:layout_constraintStart_toEndOf="@+id/txtPopularityTitle"
                app:layout_constraintTop_toTopOf="@+id/txtPopularityTitle"
                tools:text="123456" />

            <view
                android:id="@+id/youtubePlayerView"
                class="com.google.android.youtube.player.YouTubePlayerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_youtubeplayer_margin_start"
                android:layout_marginTop="@dimen/movie_youtubeplayer_margin_top"
                android:layout_marginEnd="@dimen/movie_youtubeplayer_margin_end"
                android:layout_marginBottom="@dimen/movie_youtubeplayer_margin_bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPopularityTitle"
                android:visibility="gone"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/connectionError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/movie_connectionerror_margin_start"
        android:layout_marginTop="@dimen/movie_connectionerror_margin_top"
        android:layout_marginEnd="@dimen/movie_connectionerror_margin_end"
        android:text="@string/connection_error"
        android:textStyle="bold"
        android:textSize="@dimen/movie_connectionerror_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>